Prevent incorrect config values for video backend

If a video backend was previously configured but is no longer available
in the current build of kphotoalbum, an infinite loop could occur.
This patch fixes that by checking for unsupported values at a
configuration level.

BUG: 493849